Enable to build in AndroidStudio3

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".module.articles.view.ArticlesActivity">
+        <activity android:name=".LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".module.article_detail.view.ArticleDetailActivity"></activity>
+        <activity android:name=".module.articles.view.ArticlesActivity" />
+        <activity android:name=".module.article_detail.view.ArticleDetailActivity" />
     </application>
 
 </manifest>
