--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "me.sekitaka.viper"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -45,7 +45,9 @@ dependencies {
 
     compile 'org.parceler:parceler-api:1.1.9'
     kapt 'org.parceler:parceler:1.1.9'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
 repositories {
     mavenCentral()
+    google()
 }
